WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
261662
css/filter-effects/backdrop-filter-containing-block.html fails
https://bugs.webkit.org/show_bug.cgi?id=261662
Summary
css/filter-effects/backdrop-filter-containing-block.html fails
Matt Woodrow
Reported
2023-09-17 20:55:00 PDT
Backdrop-filter should establish a containing block, and be a CSS stacking context.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-09-17 20:55:08 PDT
<
rdar://problem/115638583
>
Matt Woodrow
Comment 2
2023-09-18 16:50:04 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/17887
EWS
Comment 3
2023-09-19 16:14:05 PDT
Committed
268161@main
(0f4cd6871883): <
https://commits.webkit.org/268161@main
> Reviewed commits have been landed. Closing PR #17887 and removing active labels.
Oriol Brufau
Comment 4
2025-02-11 04:28:04 PST
***
Bug 262926
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug