css/filter-effects/backdrop-filter-containing-block.html fails because backdrop-filter doesn't create a containing block. https://bugs.webkit.org/show_bug.cgi?id=261662 <rdar://115638583>

Reviewed by Simon Fraser.

Backdrop-filter should establish a containing block for absolute and fixed position descendants, except if it's on the root element.

* LayoutTests/TestExpectations:
* Source/WebCore/rendering/RenderElement.cpp:
(WebCore::RenderElement::adjustFragmentedFlowStateOnContainingBlockChangeIfNeeded):
* Source/WebCore/rendering/RenderElementInlines.h:
(WebCore::RenderElement::canContainAbsolutelyPositionedObjects const):
(WebCore::RenderElement::canContainFixedPositionObjects const):
* Source/WebCore/rendering/style/WillChangeData.cpp:
(WebCore::WillChangeData::createsContainingBlockForAbsolutelyPositioned const):
(WebCore::WillChangeData::createsContainingBlockForOutOfFlowPositioned const):
* Source/WebCore/rendering/style/WillChangeData.h:

Canonical link: https://commits.webkit.org/268161@main